created classes, centralized elements

--- a/front/main/style.css
+++ b/front/main/style.css
@@ -3,3 +3,12 @@ body {
     margin: 0;
     box-sizing: border-box;
 }
+
+.main {
+    text-align: center;
+}
+
+.shop-name {
+    padding: 200px;
+    
+}
