--- a/front/main/style.css
+++ b/front/main/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+
+* {
+    font-family: 'Lato', sans-serif;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -10,5 +16,5 @@ body {
 
 .shop-name {
     padding: 200px;
-    
+
 }
