--- a/front/main/style.css
+++ b/front/main/style.css
@@ -8,13 +8,28 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    background-color: #16213E;
 }
 
 .main {
-    text-align: center;
+    
 }
 
 .shop-name {
-    padding: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 900;
+    color: #E94560;
+    height: 100vh;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+p {
+    width: 500px;
+    color: #fff;
 }
