--- a/front/main/style.css
+++ b/front/main/style.css
@@ -2,13 +2,14 @@
 
 * {
     font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: #16213E;
 }
 
 body {
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
-    background-color: #16213E;
+    font-size: 24px;
 }
 
 .main {
@@ -16,20 +17,37 @@ body {
 }
 
 .shop-name {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 900;
     color: #E94560;
     height: 100vh;
+    font-size: 4rem;
 }
 
 .container {
+    border: #fff solid;
+    border-radius: 15px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 700px; 
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 50px;
 }
+
 
 p {
     width: 500px;
     color: #fff;
+    padding: 50px;
+}
+
+.ersa {
+    height: 400px;
+    width: 400px;
+    border-radius: 50%;
 }
